--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "mesto-react",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-scripts": "3.4.3"
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-scripts": "3.4.3",
+    "validator": "13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "gh": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -25,5 +28,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "3.1.0"
   }
 }
